all tests passed

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -39,7 +39,7 @@ num_ant_iterations = 20
 #speed of ants in animation.
 ant_speed = 10
 #choice('no','save-gif','animate','red-line')
-visualize_method = save-gif
+visualize_method = no
 #if animate_method is save-gif, this line tells the filename.
 gif_filename = ant-march.gif
 
@@ -54,3 +54,5 @@ shortest_path_algorithm=J
 bias_pos=100.0
 #a small negative number to ensure passing must_pass edges.
 bias_neg=-0.1
+#seed of RNG.
+random_seed=2
