--- a/config-spec.ini
+++ b/config-spec.ini
@@ -19,3 +19,4 @@ gif_filename = string
 shortest_path_algorithm=option('D','FW','BF','J')
 bias_pos=float(min=0)
 bias_neg=float(max=0)
+random_seed=integer
