fix configuration, visualize tsp graph, bug in tqk program

--- a/config-spec.ini
+++ b/config-spec.ini
@@ -12,8 +12,8 @@ num_ant_iterations = integer(min=1)
 
 [visualization]
 ant_speed = float(min=0)
-visualize_method = option('no','save-gif','animate','red-line')
-gif_filename = string
+visualize_method = option('no','save-gif','animate','red-line','raw')
+fig_filename = string
 
 [program]
 shortest_path_algorithm=option('D','FW','BF','J')
