--- a/config-sample.ini
+++ b/config-sample.ini
@@ -39,9 +39,9 @@ num_ant_iterations = 20
 #speed of ants in animation.
 ant_speed = 10
 #choice('no','save-gif','animate','red-line')
-visualize_method = no
-#if animate_method is save-gif, this line tells the filename.
-gif_filename = ant-march.gif
+visualize_method = raw
+#if animate_method is save-gif/raw, this line tells the filename(gif/png).
+fig_filename = graph.eps
 
 [program]
 #algorithm to find shortest path between two nodes.
@@ -51,7 +51,7 @@ gif_filename = ant-march.gif
 # * 'J': Johnson’s algorithm.
 shortest_path_algorithm=J
 #a big positive number to avoid double counting of must_pass edges.
-bias_pos=100.0
+bias_pos=0.0
 #a small negative number to ensure passing must_pass edges.
 bias_neg=-0.1
 #seed of RNG.
