--- a/config-sample.ini
+++ b/config-sample.ini
@@ -1,7 +1,7 @@
 [problem]
 #int, the way you specify your graph, -1 to use the graph specified by graph_filename.
 #also we built in 10 test graphs, which can be specified by 0-9.
-graph_specify = 0
+graph_specify = 11
 
 #prefix of graph data file, data are stored in 2 files.
 #1. <file_prefix>.nod.dat
@@ -20,8 +20,8 @@ graph_specify = 0
 #NOTE: For Convenience, we take the first/last node as start/end node respectively.
 graph_file_prefix = sample
 
-#maximum allowed nodes in the solution
-max_num_nodes = 12
+#maximum number of nodes in the solution
+max_num_nodes = 100
 
 #in order to meet the constraint of maximum number of nodes,
 #we perform bisect search, constraint_maxeval is the search depth.
@@ -29,19 +29,19 @@ constraint_maxeval = 5
 
 [ant_colony]
 #number of ants
-num_ants = 30
+num_ants = 50
 #number of repetitions (independant run, in order to test the stableness of solution)
-num_ant_repetitions = 5
+num_ant_repetitions = 10
 #number of iterations in a single repetitions
-num_ant_iterations = 20
+num_ant_iterations = 10
 
 [visualization]
 #speed of ants in animation.
-ant_speed = 10
-#choice('no','save-gif','animate','red-line')
-visualize_method = raw
+ant_speed = 5
+#choice('no','save-gif','animate','red-line','raw')
+visualize_method = save-gif
 #if animate_method is save-gif/raw, this line tells the filename(gif/png).
-fig_filename = graph.eps
+fig_filename = graph.gif
 
 [program]
 #algorithm to find shortest path between two nodes.
@@ -49,10 +49,10 @@ fig_filename = graph.eps
 # * 'FW': Floyd-Warshall algorithm
 # * 'BF': Bellman-Ford algorithm
 # * 'J': Johnson’s algorithm.
-shortest_path_algorithm=J
+shortest_path_algorithm=D
 #a big positive number to avoid double counting of must_pass edges.
 bias_pos=0.0
 #a small negative number to ensure passing must_pass edges.
-bias_neg=-0.1
+bias_neg=-30.0
 #seed of RNG.
 random_seed=2
